# cai

./: Cargo.toml  README.md
src/: clients.rs  handlers.rs  lib.rs  main.rs  server.rs  sse.rs
src/clients/: claude.rs  gai.rs  gemini.rs  genemi.rs  openai.rs
src/handlers/: container.rs  printer.rs  recorder.rs
src/tools/: translator.rs
