[package]
name = "cai"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version="0.11.4",features=["stream","blocking"]}
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1.26"
tracing-subscriber = {version="0.3", features=["env-filter"]}
anyhow = { version = "1.0.70", features = ["backtrace", "std"] }
clap={version="4.0",features=["derive"]}
regex = "1.5"
futures = "0.3.31"
